# MAMN10

./: README.md
ikaros_MAMN10/: ReadMe.txt
ikaros_MAMN10/AGDA/: AGDA_clean.ikc
ikaros_MAMN10/Linux/Code Blocks/Ikaros/: Ikaros.cbp
ikaros_MAMN10/MAMN10/: Arm.ikc  Arm_bak.ikc  Arm_clean.ikc
ikaros_MAMN10/OS_X/IKAROS.xcodeproj/: project.pbxproj
ikaros_MAMN10/Source/: IKAROS_System.h
ikaros_MAMN10/Source/UserModules/: CMakeLists.txt  UserModules.h
ikaros_MAMN10/Source/UserModules/FaceModule/: CMakeLists.txt  FaceModule.cc  FaceModule.h  FaceModule.ikc
ikaros_MAMN10/Source/UserModules/FocusSelector/: FocusSelector.cc  FocusSelector.h  FocusSelector.ikc
ikaros_MAMN10/Source/UserModules/Kluck/: Kluck.cc  Kluck.h  Kluck.ikc
ikaros_MAMN10/Source/UserModules/ModeSelector/: CMakeLists.txt  ModeSelector.cc  ModeSelector.h  ModeSelector.ikc
ikaros_MAMN10/Source/UserModules/Movement/: Movement.cc  Movement.h  Movement.ikc
ikaros_MAMN10/Source/UserModules/MyModule/: MyModule.cc  MyModule.h  MyModule.ikc
ikaros_MAMN10/Source/UserModules/MyOpenKinect/: MyOpenKinect.cc  MyOpenKinect.h
ikaros_MAMN10/Source/UserModules/ObjectModule/: CMakeLists.txt  ObjectModule.cc  ObjectModule.h  ObjectModule.ikc  ObjectTest.cc  ObjectTest.cc_bak
ikaros_MAMN10_old/: MAMN10_Installation.txt
ikaros_MAMN10_old/MAMN10/: Arm_bak.ikc  Arm_clean.ikc
ikaros_MAMN10_old/OS_X/IKAROS.xcodeproj/: project.pbxproj
ikaros_MAMN10_old/Source/Kernel/: IKAROS_Serial_BSD.cc
ikaros_MAMN10_old/Source/Modules/: Modules.h
ikaros_MAMN10_old/Source/UserModules/FaceModule/: FaceModule.cc  (+1 more)
(+22 files in other folders)
